k8s/kuboard/contour.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kuboard-ingress
  namespace: private
spec:
  ingressClassName: contour    
  virtualhost:
    fqdn: kuboard.baway.org.cn        
  routes:
  - conditions:               
    - prefix: /            
    services:                 
    - name: kuboard
      port: 80
